--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,22 @@ dependencies {
 
 	implementation 'mysql:mysql-connector-java'
 
+
+	//swagger 관련
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+
+
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.7.0")
 	testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
+
+
 
 
 }
