--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 
+##??? ??? ?? ??
+spring.servlet.multipart.maxFileSize=10MB
+##???? ??? ??? ?? ??
+spring.servlet.multipart.maxRequestSize=100MB
+
 
 
