--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/datingjpa?useSSL=false&useUnic
 
 #db? ??? ???? ????
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=12345678
 
 #jpa?? db? ??? ??? ?????
 spring.jpa.show-sql=true
