--- a/src/main/resources/aws.properties
+++ b/src/main/resources/aws.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://springboot-jpadating.cporkyk21dry.ap-northeas
 
 #db? ??? ???? ????
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=12345678
 
 #jpa?? db? ??? ??? ?????
 spring.jpa.show-sql=true
