dependency jar 추가

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ plugins {
 	id 'java'
 }
 
+jar {
+	enabled= false
+}
+
 group = 'sajudating'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
